--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,3 @@
-SQLALCHEMY_DATABASE_URI = "mysql://sql12624208:Xg9aajYBIA@sql12.freemysqlhosting.net/sql12624208"
+SQLALCHEMY_DATABASE_URI = "sqlite:///db.sqlite"
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 DEBUG = True
